[package]
name = "h264bsanalyzer"
version = "0.1.0"
edition = "2021"

[features]
default = []
# Decode/playback: requires FFmpeg. Use one of the following:
# - decode-vcpkg (Windows): links FFmpeg from vcpkg. Run: vcpkg install ffmpeg:x64-windows
# - decode: set env FFMPEG_LIBS_DIR (and FFMPEG_INCLUDE_DIR if needed) to your FFmpeg build
# - On Linux/macOS with system FFmpeg: use decode and ensure pkg-config finds it (e.g. FFMPEG_PKG_CONFIG_PATH)
decode = ["rsmpeg"]
decode-vcpkg = ["decode", "rsmpeg/link_vcpkg_ffmpeg"]

[dependencies]
dirs = "5"
h264-parser = "0.4"
eframe = { version = "0.29", default-features = false, features = ["default_fonts", "glow"] }
rfd = "0.15"
rsmpeg = { version = "0.18", optional = true }
image = "0.25"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
